fix: get sfp working, allow debian to ssh, and fixup lcd

--- a/overlay/filesystem/etc/cloud/cloud.cfg.d/99-none-omv-setup.cfg
+++ b/overlay/filesystem/etc/cloud/cloud.cfg.d/99-none-omv-setup.cfg
@@ -13,3 +13,13 @@ datasource:
         - DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true apt-get install -f -y
         - omv-confdbadm populate
         - omv-salt deploy run hosts
+        - usermod -a -G _ssh debian
+
+# Setup network for both nics
+network:
+  version: 2
+  ethernets:
+    enp0s1:
+      dhcp4: true
+    enp0s2:
+      dhcp4: true
