fix: network improvements
Move to networkd since OMV uses it, also means first boot is a bit faster.
Also improve readme.

--- a/overlay/filesystem/etc/cloud/cloud.cfg
+++ b/overlay/filesystem/etc/cloud/cloud.cfg
@@ -101,6 +101,10 @@ system_info:
     groups: [adm, audio, cdrom, dialout, dip, floppy, netdev, plugdev, sudo, video]
     sudo: ["ALL=(ALL) NOPASSWD:ALL"]
     shell: /bin/bash
+  # systemd networking for omv
+  network:
+    renderers: ['networkd']
+    activators: ['networkd']
   # Other config here will be given to the distro class and/or path classes
   paths:
     cloud_dir: /var/lib/cloud/
