fix: improvements all around
* add our own fan controller, will need more tuning with time, but it's a great start
* add restart/shutdown hooks for ulcmd, so the display shows the state of the system
* change how we expose unifi's libs to binaries
* Fixup systemd hang at boot due to networking
* move ubnthal to systemd task, since we don't load modules due to the unifi initramfs in the prebuilt kernel

--- a/overlay/filesystem/etc/cloud/cloud.cfg.d/99-none-omv-setup.cfg
+++ b/overlay/filesystem/etc/cloud/cloud.cfg.d/99-none-omv-setup.cfg
@@ -15,7 +15,7 @@ datasource:
         - omv-salt deploy run hosts
         - usermod -a -G _ssh debian
 
-# Setup network for both nics
+# Setup network for both nics, needed so SFP+ works
 network:
   version: 2
   ethernets:
