fix:  fan curve, lcd firmware, NICs, and README.md
* Make improvements to README.md
* Do some fan curve adjustments to try and reduce fan noise
* add dfu-util so ulcmd can flash the touch screen if there's a firmware version mismatch
* Move NIC management away from cloud-init to OMV
* Ensure OMV has hostname set correctly

--- a/overlay/filesystem/etc/cloud/cloud.cfg
+++ b/overlay/filesystem/etc/cloud/cloud.cfg
@@ -101,7 +101,7 @@ system_info:
     groups: [adm, audio, cdrom, dialout, dip, floppy, netdev, plugdev, sudo, video]
     sudo: ["ALL=(ALL) NOPASSWD:ALL"]
     shell: /bin/bash
-  # systemd networking for omv
+  # systemd networking
   network:
     renderers: ['networkd']
     activators: ['networkd']
