--- a/overlay/filesystem/etc/cloud/cloud.cfg.d/99-none-omv-setup.cfg
+++ b/overlay/filesystem/etc/cloud/cloud.cfg.d/99-none-omv-setup.cfg
@@ -8,18 +8,14 @@ datasource:
       #cloud-config
       hostname: unvr-nas
 
-      # Setup cmds for open media vault
+      # Setup for OMV
       runcmd:
         - DEBIAN_FRONTEND=noninteractive DEBCONF_NONINTERACTIVE_SEEN=true apt-get install -f -y
-        - omv-confdbadm populate
-        - omv-salt deploy run hosts
         - usermod -a -G _ssh debian
+        - rm -rf /etc/systemd/network/first-boot-*.network
+        - omv-salt deploy run hosts systemd-networkd
+        - systemctl restart systemd-networkd
 
-# Setup network for both nics, needed so SFP+ works
+# We will have OMV manage the nics
 network:
-  version: 2
-  ethernets:
-    enp0s1:
-      dhcp4: true
-    enp0s2:
-      dhcp4: true
+  config: disabled
