fix: tune reboot timeout on panic, improve shutdown ulcmd support
* Ensure we have all the right targets for ulcmd-shutdown-hook to show the shutdown message
* Move to an init script that we can use for setup commands, like adjusting our kernel panic timeout.

--- a/overlay/filesystem/etc/systemd/system/ubnt-init.service
+++ b/overlay/filesystem/etc/systemd/system/ubnt-init.service
@@ -1,10 +1,10 @@
 [Unit]
-Description=Load UBNT kernel modules
+Description=UBNT bootup init script
 
 [Service]
 User=root
 Type=oneshot
-ExecStart=/usr/sbin/modprobe ubnthal
+ExecStart=/usr/lib/init/boot/ubnt-init.sh
 RemainAfterExit=yes
 
 [Install]
