--- a/overlay/filesystem/etc/systemd/system/ulcmd-shutdown-hook.service
+++ b/overlay/filesystem/etc/systemd/system/ulcmd-shutdown-hook.service
@@ -1,11 +1,11 @@
 [Unit]
 Description=ulcmd shutdown hook
 DefaultDependencies=no
-Before=shutdown.target halt.target
+Before=shutdown.target halt.target poweroff.target
 
 [Service]
 ExecStart=/usr/bin/ulcmd --sender system-hook --command poweroff
 Type=oneshot
 
 [Install]
-WantedBy=shutdown.target halt.target
+WantedBy=shutdown.target halt.target poweroff.target
