fix: fixup systemd requires
* Since we changed service names, we need to update this to prevent failures.

--- a/overlay/filesystem/etc/systemd/system/ulcmd.service
+++ b/overlay/filesystem/etc/systemd/system/ulcmd.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Daemon for MCU based LCM control
-Requires=load-ubnt-modules.service
+Requires=ubnt-init.service
 Requires=mock-ubnt-api.service
 
 [Service]
