feat: initial bluetooth support
* Enable Bluetooth LE radio support
* Build our own bccmd which we need to setup/enable this BT chipset sadly
* Use our own tool we build to interface with the ubnt eeprom, so we can not rely on their custom kernel module
* Also fix HDDs not spinning down on shutdown, doing something similar to how unifi does it but a tad more generic.

--- a/overlay/filesystem/etc/systemd/system/ubnt-init.service
+++ b/overlay/filesystem/etc/systemd/system/ubnt-init.service
@@ -4,7 +4,8 @@ Description=UBNT bootup init script
 [Service]
 User=root
 Type=oneshot
-ExecStart=/usr/lib/init/boot/ubnt-init.sh
+ExecStart=/usr/lib/init/boot/ubnt-init.sh start
+ExecStop=/usr/lib/init/boot/ubnt-init.sh stop
 RemainAfterExit=yes
 
 [Install]
