feat: Add UNVR support
* Move partition mounts to PARTLABEL instead of paths
* Add dual firmware building support, specify the build type using the BOARD env var when using make
* Update to Unifi 4.0.5 pre-release firmware
* Move ulcmd init to be our "user interface" setup script, will handle LEDs on the UNVR4 in the future
* Update README with updated instructions
* Add udev rules to support /dev/boot which is what Unifi uses for some stupid reason for their emmc. This is required for systemd to mount correctly after chroot.
* Fixup small bugs found along the way

--- a/overlay/filesystem/etc/systemd/system/ulcmd.service
+++ b/overlay/filesystem/etc/systemd/system/ulcmd.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=Daemon for MCU based LCM control
+Description=Unifi LED/ULCMD contoller
 Requires=ubnt-init.service
 Requires=mock-ubnt-api.service
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/ulcmd
+ExecStart=/usr/lib/init/boot/ubnt-ulcmd.sh
 KillMode=process
 Restart=on-failure
 RestartSec=2s
