--- a/genimage_initial.cfg
+++ b/genimage_initial.cfg
@@ -7,9 +7,9 @@ image boot.ext4 {
 }
 
 image rootfs.ext4 {
-	name = "debian"
+	name = "rootfs"
 	ext4 {
-		label = "root"
+		label = "rootfs"
 		use-mke2fs = true # Needed to prevent resize issues...
 	}
 	size = 3G
