fix: update to 4.0.6 and improved unvr support
* We should hopefully have working fans for the UNVR4 now
* Update to latest pre-release unifi firmware 4.0.6
* Improve hwmon logic in our scripts

--- a/overlay/filesystem/etc/systemd/system/unvr-fan-daemon.service
+++ b/overlay/filesystem/etc/systemd/system/unvr-fan-daemon.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Fan Controller daemon for the UNVR Pro
+Description=Fan Controller daemon for the UNVR/UNVRPRO
 Requires=ubnt-init.service
 
 [Service]
