fix: migrate UNVR init logic
Let's keep ulcmd for the pro only, and move LED stuff elsewhere.

--- a/overlay/filesystem/etc/systemd/system/ulcmd.service
+++ b/overlay/filesystem/etc/systemd/system/ulcmd.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Unifi LED/ULCMD contoller
+Description=Unifi ULCMD contoller
 Requires=ubnt-init.service
 Requires=mock-ubnt-api.service
 
