--- a/overlay/kernel/arch/arm64/configs/alpine_v2_defconfig
+++ b/overlay/kernel/arch/arm64/configs/alpine_v2_defconfig
@@ -309,6 +309,8 @@ CONFIG_BTRFS_FS_POSIX_ACL=y
 # CONFIG_MANDATORY_FILE_LOCKING is not set
 CONFIG_QUOTA=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
+CONFIG_FUSE_FS=m
+CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=y
 CONFIG_PROC_KCORE=y
 CONFIG_TMPFS=y
