feat: add quota modules to try and fix #24
This should hopefully add what we need for quota mounts to work in OMV. :)

--- a/overlay/kernel/arch/arm64/configs/alpine_v2_defconfig
+++ b/overlay/kernel/arch/arm64/configs/alpine_v2_defconfig
@@ -309,6 +309,7 @@ CONFIG_BTRFS_FS_POSIX_ACL=y
 # CONFIG_MANDATORY_FILE_LOCKING is not set
 CONFIG_QUOTA=y
 # CONFIG_PRINT_QUOTA_WARNING is not set
+CONFIG_QFMT_V2=m
 CONFIG_FUSE_FS=m
 CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=y
